<resources>
    <string name="app_name">szymon_auguscik_czw_8_00</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="add_character">+</string>
    <string name="subtract_character">-</string>
    <string name="multiply_character">×</string>
    <string name="divide_character">÷</string>
    <string name="equation_character">=</string>
    <string name="clear_character">C</string>
    <string name="dot_character">.</string>
    <string name="offset_characters">…</string>
    <string name="error">FAIL-CLEAR</string>
</resources>