<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="60sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Button7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_7"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_8"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_9"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/AddButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/add_character"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Button4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_4"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_5"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_6"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/SubtractButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/subtract_character"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/Button1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_1"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_2"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_3"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/MultiplyButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/multiply_character"
                android:textSize="24sp"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/ClearButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear_character"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/Button0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/digit_0"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/DotButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/dot_character"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/DivideButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/divide_character"
                android:textSize="36sp"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/EquationButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:text="@string/equation_character"
                android:textSize="36sp" />

        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>